--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/StephenGrider/Lyrical-GraphQL"
   },
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+    "start": "nodemon index.js --ignore client"
   },
   "author": "",
   "license": "ISC",
@@ -39,5 +39,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
+  },
+  "engines": {
+    "node": "6.6.0"
   }
 }
